assets/scss/abstract/styles.scss
// {{ $bg := resources.Get "images/bg.png" }}
// {{ $bgE := resources.Get "images/bg-edge.png" }}
// {{ $bgER := resources.Get "images/bg-edge-r.png" }}

body {
    background-image: url("{{ $bgE.RelPermalink }}"), url("{{ $bgER.RelPermalink }}"), url("{{ $bg.RelPermalink }}");
    background-position:
        left top,
        right top,
        left top;
    background-repeat: repeat-y, repeat-y, repeat;
    backdrop-filter: grayscale(20%) brightness(80%) ;
}


.border-color-orange {
    border-color: $color-orange !important;
}

ul:not(.nav) {
    list-style-type: square;
}

.indented {
    h2 {
        padding: 0 1em;
    }

    p {
        text-indent: 0.5em;
        padding: 0 3em;
    }

    ul {
        margin-inline-start: 4rem;

        li::marker {
            color: $color-orange;
        }
    }
}

.toc {
    li::marker {
        color: $color-orange;
    }
}

.event-month:not(:last-of-type) {
    border-bottom: 0.25rem solid $color-purple;
    padding-bottom: 1rem;
}

#core-container {
    
    background-image: url("{{ $bg.RelPermalink }}");
    
    margin: auto;

    border-left: 0.25rem solid $color-purple;

    border-right: 0.25rem solid $color-purple;
    padding:0;
}

.i:not(.btn) {
    --fa-primary-opacity: 1;
    --fa-secondary-opacity: 1;
    --fa-primary-color: #{$color-orange};
    --fa-secondary-color: #{scale-color($color-orange, $lightness: -33%)};
}

.social-bar{
    background-image: none !important;
    background-color: transparent !important; /* Optional: if you need no color */
    backdrop-filter: grayscale(100%) brightness(150%) !important;
}


#top-nav {



    .navbar {
        background-image: none !important;
        background-color: transparent !important; /* Optional: if you need no color */
        backdrop-filter: grayscale(100%) brightness(150%);
    }

    &.nav-scroller {
        background-image: url("{{ $bg.RelPermalink }}");
        border-bottom: 0.25rem solid $color-blue;
        margin-top: 0;
        margin-bottom: 0;
        
    }

    
    .nav-item {

        padding: 0 0.1rem;

        .nav-link {

            border-width: medium;
            border-style: solid;
            border-color: transparent;

            &:hover {
                border-color: $link-hover-color-dark;
            }

            &.active {
                background-color: $primary;
                color: $color-blue;

                border-color: transparent;
            }
        }
    }
}
header {
    max-width:600px;
}
#home-header {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    padding-top: 3rem;
    padding-bottom: 3rem;
    border-bottom: 0.25rem solid $color-blue;
}

#header-card {
    backdrop-filter: blur(2px) grayscale(100%) brightness(20%) contrast(90%);
}

.card {
    backdrop-filter: brightness(80%)  grayscale(100%) ;


    .card-header {
        border-bottom: 0.25rem solid $color-blue;

    }

    .card-body {
        background: rgba(shift-color($color-blue, 60%), 0.33);
    }

    .card-footer {
        border-top: 0.25rem solid $color-blue;
    }
}

.bg-blur-sm {
    backdrop-filter: blur(5px);
}

.bg-blur {
    backdrop-filter: blur(10px);
}

.bg-blur-lg {
    backdrop-filter: blur(15px);
}

.navbar-toggler:focus {
    box-shadow: 0 0 0 0;
}

.navbar-toggler:active {
    border: var(--bs-border-width) solid #444;
}

.top-nav-logo {
    height: 100%;
    width: auto;
    max-height: 46px;
}

@media (min-width: 576px) {
    .top-nav-logo {
        height: 46px;
    }
}

@media (min-width: 992px) {
    .top-nav-logo {
        height: 100%;
        width: 100%;
        max-height: 64px;
        display: inline !important;
    }
}

